--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="x">
+    <div class="back">
         <img class="background" src="./images/background.jpg" />
     </div>
 
@@ -20,7 +20,6 @@
         <div>
             <img class="logo" src="/images/logo.webp">
             <div class="about">
-                <!-- <h1>Roadchiefs</h1> -->
                 <div class="about-conten">
                     Im Jahr 2016 offiziell gegründet, sorgen die Road Chiefs jedoch seit Jahren regional für Aufsehen.
                     Wie in unserem Logo unschwer zu erkennen ist, wird unser Verein durch verschiedene Aspekte geprägt.
